--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
       <section class="utama">
         <article>
           <figure>
-            <img src="images/gudeg.jpg" alt="Gudeg Basah" />
+            <img src="Images/gudeg.jpg" alt="Gudeg Basah" />
             <figcaption><strong>Gudeg Basah</strong></figcaption>
           </figure>
           <hgroup>
@@ -37,7 +37,7 @@
 
         <article>
           <figure>
-            <img src="images/sateklatak.jpg" alt="sate klatak" />
+            <img src="Images/sateklatak.jpg" alt="sate klatak" />
             <figcaption><strong>Sate Klatak</strong></figcaption>
           </figure>
           <hgroup>
